--- a/cse-register.htm
+++ b/cse-register.htm
@@ -1247,7 +1247,7 @@
     <div class="container">
         <div class="section-header">
             <h2 class="section-title">Event Tracks</h2>
-            <p class="section-subtitle">Explore event categories — Technical, Gaming, Creative & Fun</p>
+            <p class="section-subtitle">Explore event categories Technical, Gaming, Creative & Fun</p>
         </div>
 
         <div class="row g-4">
@@ -1258,12 +1258,12 @@
                         <h3 class="card-title">💻 Technical Events</h3>
                         <p class="flex-grow-1">Coding, debugging, cybersecurity, hardware assembly, and ideation challenges. Test your logic, speed, and problem-solving skills.</p>
                         <ul class="small">
-                            <li>Decodex — Coding Challenge</li>
-                            <li>Shadow Script — Blind Coding</li>
-                            <li>Error 404 — Bug Hunting</li>
-                            <li>Cipher Strike — Capture The Flag</li>
-                            <li>PC Pit Stop — Computer Assembly</li>
-                            <li>Mind Spark — Ideathon</li>
+                            <li>Decodex Coding Challenge</li>
+                            <li>Shadow Script Blind Coding</li>
+                            <li>Error 404 Bug Hunting</li>
+                            <li>Cipher Strike Capture The Flag</li>
+                            <li>PC Pit Stop Computer Assembly</li>
+                            <li>Mind Spark Ideathon</li>
                         </ul>
                         <a href="#events" class="btn btn-primary mt-auto">Explore Technical Events</a>
                     </div>
@@ -1277,8 +1277,8 @@
                         <h3 class="card-title">🎮 Gaming & Esports</h3>
                         <p class="flex-grow-1">Compete in high-energy gaming tournaments. Bring your squad or fly solo in adrenaline-pumping matches.</p>
                         <ul class="small">
-                            <li>Valorant — Encore Reloaded (₹10,000 prize!)</li>
-                            <li>Gaming Console — Valorant Tournament</li>
+                            <li>Valorant Encore Reloaded (₹10,000 prize!)</li>
+                            <li>Gaming Console Valorant Tournament</li>
                         </ul>
                         <a href="#events" class="btn btn-primary mt-auto">Join the Arena</a>
                     </div>
@@ -1292,8 +1292,8 @@
                         <h3 class="card-title">🎨 Creative & Design</h3>
                         <p class="flex-grow-1">Unleash your creativity with design challenges and tech exhibitions. Perfect for artists, designers, and innovators.</p>
                         <ul class="small">
-                            <li>Creatitech — Canva Designing</li>
-                            <li>Pavilion — Project Expo (Showcase your work!)</li>
+                            <li>Creatitech Canva Designing</li>
+                            <li>Pavilion Project Expo (Showcase your work!)</li>
                         </ul>
                         <a href="#events" class="btn btn-primary mt-auto">Show Your Creativity</a>
                     </div>
@@ -1307,8 +1307,8 @@
                         <h3 class="card-title">🎉 Fun & Physical Activities</h3>
                         <p class="flex-grow-1">Take a break from screens with hilarious, team-based, and physically engaging games. Great for all skill levels!</p>
                         <ul class="small">
-                            <li>Blind Beats — Fun Zone (meme contests, treasure hunts)</li>
-                            <li>Soapy Football — Slip ‘n Slide Soccer!</li>
+                            <li>Blind Beats Fun Zone (meme contests, treasure hunts)</li>
+                            <li>Soapy Football Slip ‘n Slide Soccer!</li>
                         </ul>
                         <a href="#events" class="btn btn-primary mt-auto">Join the Fun</a>
                     </div>
@@ -1337,8 +1337,8 @@
                         <h3 class="card-title">🏛️ Project Expo & Showcase</h3>
                         <p class="flex-grow-1">Explore student innovations, department highlights, and tech demos. Get inspired by what your peers have built!</p>
                         <ul class="small">
-                            <li>Pavilion — Project Expo (Both Days)</li>
-                            <li>Open to all — no registration needed</li>
+                            <li>Pavilion Project Expo (Both Days)</li>
+                            <li>Open to all no registration needed</li>
                         </ul>
                         <a href="#events" class="btn btn-primary mt-auto">Visit the Expo</a>
                     </div>
@@ -1489,7 +1489,7 @@
                     <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
                             Free WiFi is available across campus. Network: <strong>IESCE_GUEST</strong><br>
-                            Password: <strong>welcome2025</strong> (subject to change — check notice boards)
+                            Password: <strong>welcome2025</strong> (subject to change check notice boards)
                         </div>
                     </div>
                 </div>
@@ -1521,7 +1521,7 @@
                         <div class="accordion-body">
                             <strong>Main Cafeteria</strong> (Near Admin Block): Open 8 AM – 8 PM<br>
                             <strong>Snack Counters</strong>: Near Basketball Court & Library (11 AM – 4 PM)<br>
-                            <strong>Sponsored by Capital BBQ Point & TO Trip Diaries</strong> — look for their stalls!
+                            <strong>Sponsored by Capital BBQ Point & TO Trip Diaries</strong> look for their stalls!
                         </div>
                     </div>
                 </div>
@@ -1551,11 +1551,11 @@
                     <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
                             <ul>
-                                <li><strong>Workshops & Pavilion</strong>: Drop in anytime — no strict timing</li>
-                                <li><strong>Competitions (Decodex, CTF, etc.)</strong>: Latecomers may not be allowed — start sharp!</li>
-                                <li><strong>Valorant / Soapy Football</strong>: Matches run on schedule — arrive 15 mins early</li>
+                                <li><strong>Workshops & Pavilion</strong>: Drop in anytime no strict timing</li>
+                                <li><strong>Competitions (Decodex, CTF, etc.)</strong>: Latecomers may not be allowed start sharp!</li>
+                                <li><strong>Valorant / Soapy Football</strong>: Matches run on schedule arrive 15 mins early</li>
                             </ul>
-                            Still stuck? Call the event coordinator — they’ll try to accommodate you.
+                            Still stuck? Call the event coordinator they’ll try to accommodate you.
                         </div>
                     </div>
                 </div>
