--- a/cse-register.htm
+++ b/cse-register.htm
@@ -1582,57 +1582,75 @@
 </section>
 
     <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 mb-4">
-                    <div class="footer-logo">CS TechFest Nexus</div>
-                    <p class="text-secondary-custom">A premier computer science festival featuring the latest in technology, innovation, and creativity.</p>
-                    <div class="social-links">
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-twitter"></i></a>
-                        <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
-                        <a href="#"><i class="bi bi-github"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 mb-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled footer-links">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#events">Events</a></li>
-                        <li><a href="#schedule">Schedule</a></li>
-                        <li><a href="#tracks">Tracks</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-6 mb-4">
-                    <h5>Resources</h5>
-                    <ul class="list-unstyled footer-links">
-                        <li><a href="#map">Venue Map</a></li>
-                        <li><a href="#leaderboard">Leaderboard</a></li>
-                        <li><a href="#help">Help</a></li>
-                        <li><a href="#">Sponsors</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-4 mb-4">
-                    <h5>Contact Us</h5>
-                    <p class="text-secondary-custom">
-                        <i class="bi bi-geo-alt"></i> Computer Science Department<br>
-                        University Campus, City - 123456
-                    </p>
-                    <p class="text-secondary-custom">
-                        <i class="bi bi-telephone"></i> +91 98765 43210<br>
-                        <i class="bi bi-envelope"></i> info@techfestnexus.com
-                    </p>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 mb-4">
+                <div class="footer-logo">HOPE INT CORE</div>
+                <p class="text-secondary-custom">
+                    Hack the Norm, Code the Future, Byte the Dream — A Thrilling Intercollegiate Tech Fest by CESA, IESCE.
+                </p>
+                <p class="text-secondary-custom small mt-3">
+                    <strong>Built with 💡 by HOPE</strong><br>
+                    Empowering students through tech, innovation & education.<br>
+                    <a href="https://justinalexia.vercel.app" target="_blank" class="text-primary">harinandan.dev</a>
+                </p>
+                <div class="social-links mt-3">
+                    <a href="https://instagram.com/hope_iesce" target="_blank"><i class="bi bi-instagram"></i></a>
+                    <a href="https://github.com/harikrishnan-ies" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="https://linkedin.com/in/harikrishnankerala" target="_blank"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://discord.gg/hope-tech" target="_blank"><i class="bi bi-discord"></i></a>
                 </div>
             </div>
-            <hr class="my-4 border-custom">
-            <div class="text-center">
-                <p class="text-secondary-custom mb-0">&copy; 2025 CS TechFest Nexus. All rights reserved.</p>
+
+            <div class="col-lg-2 col-md-6 mb-4">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled footer-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#events">Events</a></li>
+                    <li><a href="#schedule">Schedule</a></li>
+                    <li><a href="#tracks">Categories</a></li>
+                </ul>
+            </div>
+
+            <div class="col-lg-2 col-md-6 mb-4">
+                <h5>Resources</h5>
+                <ul class="list-unstyled footer-links">
+                    <li><a href="#venue">Venue Map</a></li>
+                    <li><a href="#faq">FAQ / Help</a></li>
+                    <li><a href="#sponsors">Sponsors</a></li>
+                    <li><a href="#register">Register</a></li>
+                </ul>
+            </div>
+
+            <div class="col-lg-4 mb-4">
+                <h5>Contact Us</h5>
+                <p class="text-secondary-custom">
+                    <i class="bi bi-geo-alt"></i> IES College of Engineering<br>
+                    Chittilappilly, Thrissur - 680 551, Kerala
+                </p>
+                <p class="text-secondary-custom">
+                    <i class="bi bi-telephone"></i> +91 95267 96507 (Anaswara Dinesh)<br>
+                    <i class="bi bi-envelope"></i> cesa.iesce@gmail.com
+                </p>
+                <p class="text-secondary-custom small mt-2">
+                    <strong>Website by:</strong> Harinandan K<br>
+                    Founder, HOPE | BTech Data Science ‘27<br>
+                    IES College of Engineering
+                </p>
             </div>
         </div>
-    </footer>
 
+        <hr class="my-4 border-custom">
+
+        <div class="text-center">
+            <p class="text-secondary-custom mb-0">
+                &copy; 2025 Algo Nirva 5.0 — Organized by CESA, IESCE.<br>
+                <span class="d-block mt-1">Built with ❤️ by <a href="https://justinalexia.vercel.app" target="_blank" class="text-primary">HOPE Platform</a> | Empowering Student Innovation</span>
+            </p>
+        </div>
+    </div>
+</footer>
     <!-- Track Modal -->
     <div class="modal fade" id="trackModal" tabindex="-1">
         <div class="modal-dialog">
