--- a/cse-register.htm
+++ b/cse-register.htm
@@ -830,7 +830,7 @@
                                 <span class="badge-custom">Competition</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 12:30 PM</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 12:30 PM</span>
                                 <span><i class="bi bi-geo-alt"></i> Lab 4</span>
                             </div>
                             <p>Solve challenges in cryptography, web exploitation, and reverse engineering to capture digital flags. Test your cybersecurity skills in this thrilling CTF event.</p>
@@ -847,7 +847,7 @@
                                 <span class="badge-custom">Competition</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 4:00 PM</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 4:00 PM</span>
                                 <span><i class="bi bi-geo-alt"></i> Lab 4</span>
                             </div>
                             <p>Assemble and troubleshoot computer systems using provided hardware components. Speed, accuracy, and problem-solving under pressure will decide the winner.</p>
@@ -864,7 +864,7 @@
                                 <span class="badge-custom">Competition</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 1:30 PM</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 1:30 PM</span>
                                 <span><i class="bi bi-geo-alt"></i> Room 201</span>
                             </div>
                             <p>A fast-paced challenge featuring logic puzzles and rapid-fire quizzes testing your technical knowledge and problem-solving agility. Perfect for coders and tech enthusiasts.</p>
@@ -902,7 +902,7 @@
                                 <span class="badge-custom">Competition</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 12:30 PM</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 12:30 PM</span>
                                 <span><i class="bi bi-geo-alt"></i> Lab 4</span>
                             </div>
                             <p>Solve challenges in cryptography, web exploitation, and reverse engineering to capture digital flags. Test your cybersecurity skills in this thrilling CTF event.</p>
@@ -919,7 +919,7 @@
                                 <span class="badge-custom">Competition</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 4:00 PM</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 4:00 PM</span>
                                 <span><i class="bi bi-geo-alt"></i> Lab 4</span>
                             </div>
                             <p>Assemble and troubleshoot computer systems using provided hardware components. Speed, accuracy, and problem-solving under pressure will decide the winner.</p>
@@ -936,7 +936,7 @@
                                 <span class="badge-custom">Competition</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 1:30 PM</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 1:30 PM</span>
                                 <span><i class="bi bi-geo-alt"></i> Room 201</span>
                             </div>
                             <p>A fast-paced challenge featuring logic puzzles and rapid-fire quizzes testing your technical knowledge and problem-solving agility. Perfect for coders and tech enthusiasts.</p>
@@ -953,7 +953,7 @@
                                 <span class="badge-custom">Competition</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 12:30 PM</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 12:30 PM</span>
                                 <span><i class="bi bi-geo-alt"></i> Room 204</span>
                             </div>
                             <p>Pitch innovative tech solutions to real-world problems. Teams of 1–5 will present ideas judged on creativity, feasibility, and impact. ₹250 per team. Prizes: ₹6000, ₹4000.</p>
@@ -970,7 +970,7 @@
                                 <span class="badge-custom">Competition</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 2:00 PM – 4:00 PM</span>
+                                <span><i class="bi bi-clock"></i> 2:00 PM 4:00 PM</span>
                                 <span><i class="bi bi-geo-alt"></i> Lab 3</span>
                             </div>
                             <p>Participants receive buggy code and must identify and fix errors within the time limit. Tests debugging skills, logical thinking, and coding proficiency.</p>
@@ -987,7 +987,7 @@
                                 <span class="badge-custom">Competition</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 12:30 PM</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 12:30 PM</span>
                                 <span><i class="bi bi-geo-alt"></i> Lab 3</span>
                             </div>
                             <p>Code without seeing the screen! Participants write programs with monitors turned off testing memory, logic flow, and muscle memory. ₹50 entry. Prizes: ₹1000, ₹500.</p>
@@ -1008,7 +1008,7 @@
                                 <span class="badge-custom">Workshop</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 4:00 PM</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 4:00 PM</span>
                                 <span><i class="bi bi-geo-alt"></i> Lab 2</span>
                             </div>
                             <p>Learn to design eye-catching posters, infographics, and social media content using Canva. Perfect for designers, marketers, and creative minds. ₹50 entry. Prizes: ₹1000, ₹500.</p>
@@ -1025,7 +1025,7 @@
                                 <span class="badge-custom">Workshop</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 4:00 PM (Both Days)</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 4:00 PM (Both Days)</span>
                                 <span><i class="bi bi-geo-alt"></i> Lab 1</span>
                             </div>
                             <p>Hands-on sessions covering fundamentals of web development, networking concepts, and practical tools. Great for beginners and intermediates. Free or nominal fee.</p>
@@ -1062,7 +1062,7 @@
                                 <span class="badge-custom">Fun Activity</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 4:00 PM (Both Days)</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 4:00 PM (Both Days)</span>
                                 <span><i class="bi bi-geo-alt"></i> Room 205</span>
                             </div>
                             <p>Immersive fun zone with treasure hunts, meme contests, team games, and brain-teasing activities. Perfect for solo players or squads. Just ₹20 to join!</p>
@@ -1079,7 +1079,7 @@
                                 <span class="badge-custom">Fun Activity</span>
                             </div>
                             <div class="card-meta">
-                                <span><i class="bi bi-clock"></i> 11:00 AM – 4:00 PM</span>
+                                <span><i class="bi bi-clock"></i> 11:00 AM 4:00 PM</span>
                                 <span><i class="bi bi-geo-alt"></i> Basketball Court</span>
                             </div>
                             <p>A playful, slippery twist on football played on a soap-covered court! Team-based, hilarious, and wildly entertaining. ₹699.99 per team. Prizes: ₹5000, ₹2000.</p>
@@ -1519,8 +1519,8 @@
                     </h2>
                     <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
-                            <strong>Main Cafeteria</strong> (Near Admin Block): Open 8 AM – 8 PM<br>
-                            <strong>Snack Counters</strong>: Near Basketball Court & Library (11 AM – 4 PM)<br>
+                            <strong>Main Cafeteria</strong> (Near Admin Block): Open 8 AM 8 PM<br>
+                            <strong>Snack Counters</strong>: Near Basketball Court & Library (11 AM 4 PM)<br>
                             <strong>Sponsored by Capital BBQ Point & TO Trip Diaries</strong> look for their stalls!
                         </div>
                     </div>
