--- a/cse-register.htm
+++ b/cse-register.htm
@@ -209,6 +209,9 @@
             margin-bottom: 0.75rem;
             color: white;
         }
+        .small{
+            color: white;
+        }
 
         .card-meta {
             display: flex;
