--- a/cse-register.htm
+++ b/cse-register.htm
@@ -482,7 +482,7 @@
 
         .accordion-body {
             background: var(--dark-bg);
-            color: var(--text-secondary);
+            color: white;
         }
 
         /* Modal */
