--- a/rai.htm
+++ b/rai.htm
@@ -625,6 +625,7 @@
             border: 1px solid var(--glass-border);
             margin-bottom: 0.5rem;
             transition: all 0.3s ease;
+            color: white;
         }
 
         .accordion-item:hover {
@@ -845,7 +846,7 @@
     <!-- Loading Screen -->
     <div class="loading" id="loadingScreen">
         <div class="loading-content">
-            <div class="loading-text">Initializing Techfest Control Panel...</div>
+            <div class="loading-text">Powerd by HOPE</div>
             <div class="loading-spinner"></div>
         </div>
     </div>
