pushed data science removed code

--- a/cse-register.htm
+++ b/cse-register.htm
@@ -1635,7 +1635,7 @@
                 </p>
                 <p class="text-secondary-custom small mt-2">
                     <strong>Website by:</strong> Harinandan K<br>
-                    Founder, HOPE | BTech Data Science ‘27<br>
+                    Founder, HOPE | BTech<br>
                     IES College of Engineering
                 </p>
             </div>
