--- a/rai.htm
+++ b/rai.htm
@@ -16,7 +16,7 @@
     
     <!-- Three.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    
+     | BTech Data Science ‘27
     <style>
         :root {
             --primary: #0066ff;
