--- a/index.htm
+++ b/index.htm
@@ -86,7 +86,7 @@
             left: 0;
             width: var(--cursor-size);
             height: var(--cursor-size);
-            border: 1px solid #000;
+            border: 1px solid #fff;
             border-radius: 50%;
             pointer-events: none;
             z-index: 20000;
