feat: Add IoT Summer Camp promotional modal and integrate it into the homepage.

--- a/index.htm
+++ b/index.htm
@@ -1614,6 +1614,8 @@
         });
 
     </script>
+    <!-- IoT Summer Camp Modal -->
+    <script src="js/summer-camp-modal.js"></script>
 </body>
 
 </html>
