--- a/iot2.htm
+++ b/iot2.htm
@@ -47,25 +47,21 @@
         #canvas-container {
             position: fixed;
             top: 0;
-            right: 0;
-            width: 50vw;
+            left: 0;
+            width: 100vw;
             height: 100vh;
-            z-index: 0;
+            z-index: -1;
             pointer-events: none;
-            /* Allow clicks to pass through */
             transition: opacity 0.5s ease;
         }
 
         /* Mobile Canvas Adjustment */
         @media (max-width: 1024px) {
             #canvas-container {
-                position: absolute;
-                /* Scroll with page on mobile */
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 60vh;
-                /* Cover top area */
+                /* Ensure it stays fixed on mobile too */
+                position: fixed;
+                width: 100vw;
+                height: 100vh;
             }
         }
 
@@ -105,6 +101,7 @@
 </head>
 
 <body class="antialiased">
+    <div id="canvas-container"></div>
 
     <!-- Loader -->
     <div class="loader-screen" id="loader">
@@ -136,7 +133,7 @@
 
         <!-- Hero Section -->
         <!-- 1. REPLACE THE HERO SECTION HTML -->
-        <section class="relative min-h-screen flex items-center overflow-hidden bg-[#050505] w-full" id="hero">
+        <section class="relative min-h-screen flex items-center overflow-hidden bg-transparent w-full" id="hero">
 
             <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
                 <div class="absolute inset-0"
@@ -156,7 +153,7 @@
                 <div class="grid grid-cols-1 lg:grid-cols-12 gap-8 lg:gap-12 items-center">
 
                     <div class="lg:col-span-6 flex flex-col justify-center">
-                        <div id="canvas-container"></div>
+
 
                         <div class="flex">
                             <div
@@ -184,7 +181,8 @@
 
                         <p
                             class="text-base sm:text-lg text-gray-400 max-w-lg leading-relaxed mb-8 lg:mb-10 font-medium reveal-text border-l-2 border-white/20 pl-4 lg:pl-6">
-                            Architect autonomous IoT systems using C++, Python, and Industrial Sensor Arrays. A rigorous
+                            Architect autonomous IoT systems using C++, Python, and Industrial Sensor Arrays. A
+                            rigorous
                             14-day engineering sprint.
                         </p>
 
@@ -227,7 +225,9 @@
 
 
         <!-- INSERT AFTER HERO SECTION -->
-        <section class="py-16 lg:py-24 bg-[#0a0a0a] relative overflow-hidden border-y border-white/5" id="testimonials">
+        <section
+            class="py-16 lg:py-24 bg-[#0a0a0a]/90 backdrop-blur-sm relative overflow-hidden border-y border-white/5"
+            id="testimonials">
 
             <div class="absolute inset-0 opacity-[0.1] pointer-events-none"
                 style="background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI0IiBoZWlnaHQ9IjQiPgo8cmVjdCB3aWR0aD0iNCIgaGVpZ2h0PSI0IiBmaWxsPSIjZmZmIi8+CjxyZWN0IHdpZHRoPSIxIiBoZWlnaHQ9IjEiIGZpbGw9IiMwMDAiLz4KPC9zdmc+');">
@@ -333,7 +333,7 @@
         </section>
 
         <!-- INSERT BEFORE MODULES SECTION -->
-        <section class="py-16 lg:py-24 bg-white relative overflow-hidden" id="capstone">
+        <section class="py-16 lg:py-24 bg-white/90 backdrop-blur-sm relative overflow-hidden" id="capstone">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12">
 
                 <div class="flex flex-col lg:flex-row items-center gap-10 lg:gap-16">
@@ -442,7 +442,7 @@
         <!-- Bento Grid Features -->
         <!-- REPLACES THE OLD #modules SECTION -->
         <section
-            class="px-4 sm:px-6 lg:px-12 py-16 lg:py-24 bg-white rounded-t-[2rem] lg:rounded-t-[3rem] relative z-20 shadow-[0_-50px_100px_rgba(0,0,0,0.1)] -mt-10"
+            class="px-4 sm:px-6 lg:px-12 py-16 lg:py-24 bg-white/90 backdrop-blur-sm rounded-t-[2rem] lg:rounded-t-[3rem] relative z-20 shadow-[0_-50px_100px_rgba(0,0,0,0.1)] -mt-10"
             id="modules">
             <div class="max-w-7xl mx-auto">
 
@@ -695,7 +695,7 @@
         </section>
 
         <!-- Tech Stack Horizontal Scroll -->
-        <section class="py-16 lg:py-24 bg-[#050505] relative overflow-hidden" id="tech">
+        <section class="py-16 lg:py-24 bg-[#050505]/90 backdrop-blur-sm relative overflow-hidden" id="tech">
 
             <div class="absolute inset-0 opacity-[0.03] pointer-events-none"
                 style="background-image: linear-gradient(#fff 1px, transparent 1px), linear-gradient(90deg, #fff 1px, transparent 1px); background-size: 50px 50px;">
@@ -921,7 +921,7 @@
 
 
         <!-- INSERT AFTER TECH STACK -->
-        <section class="py-16 lg:py-24 bg-[#F4F4F5] border-t border-black/5 overflow-hidden">
+        <section class="py-16 lg:py-24 bg-[#F4F4F5]/90 backdrop-blur-sm border-t border-black/5 overflow-hidden">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12">
 
                 <div class="flex justify-between items-end mb-8 lg:mb-12">
@@ -992,7 +992,7 @@
 
 
         <!-- REPLACES THE #schedule SECTION -->
-        <section class="py-16 lg:py-24 bg-white relative z-20" id="schedule">
+        <section class="py-16 lg:py-24 bg-white/90 backdrop-blur-sm relative z-20" id="schedule">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12">
 
                 <div class="mb-12 lg:mb-20 border-b border-black/10 pb-8 lg:pb-10">
@@ -1364,7 +1364,7 @@
             </div>
         </section>
         <!-- INSERT BEFORE ENROLL SECTION -->
-        <section class="py-16 lg:py-24 bg-[#050505] text-white">
+        <section class="py-16 lg:py-24 bg-[#050505]/90 backdrop-blur-sm text-white">
             <div class="max-w-3xl mx-auto px-4 sm:px-6">
 
                 <h2 class="font-display text-3xl sm:text-4xl font-bold mb-8 lg:mb-12 text-center">
@@ -1442,7 +1442,7 @@
 
 
         <!-- REPLACES THE OLD #enroll SECTION -->
-        <section class="py-16 lg:py-24 bg-[#F4F4F5] relative overflow-hidden" id="enroll">
+        <section class="py-16 lg:py-24 bg-[#F4F4F5]/90 backdrop-blur-sm relative overflow-hidden" id="enroll">
 
             <div class="absolute inset-0 pointer-events-none opacity-[0.05]"
                 style="background-image: linear-gradient(#000 1px, transparent 1px), linear-gradient(90deg, #000 1px, transparent 1px); background-size: 60px 60px;">
@@ -1748,7 +1748,8 @@
         </section>
 
         <!-- REPLACES THE FOOTER -->
-        <footer class="bg-[#050505] text-white py-16 lg:py-24 border-t border-white/10 relative overflow-hidden">
+        <footer
+            class="bg-[#050505]/90 backdrop-blur-sm text-white py-16 lg:py-24 border-t border-white/10 relative overflow-hidden">
 
             <div class="absolute inset-0 opacity-[0.05] pointer-events-none"
                 style="background-image: linear-gradient(#333 1px, transparent 1px), linear-gradient(90deg, #333 1px, transparent 1px); background-size: 40px 40px;">
