style: Update body background color to a dark gray hex value.

--- a/iot2.htm
+++ b/iot2.htm
@@ -21,7 +21,7 @@
 
         body {
             font-family: 'Manrope', sans-serif;
-            background-color: var(--off-white);
+            background-color: #050505;
             color: var(--black);
             overflow-x: hidden;
             cursor: crosshair;
